8185736: missing default exception handler in calls to rethrow_Stub

Reviewed-by: kvn